--- a/stacks/syncthing/compose.yaml
+++ b/stacks/syncthing/compose.yaml
@@ -6,16 +6,11 @@ services:
     image: lscr.io/linuxserver/syncthing
     container_name: syncthing
     restart: always
-    networks:
-      proxy:
+    network_mode: host
     environment:
       PUID: $UID
       PGID: $GID
       UMASK: $UMASK
-    ports:
-     - 22000:22000/tcp
-     - 22000:22000/udp
-     - 21027:21027/udp
     volumes:
       - $syncthingFolder/Syncthing:/data1:rw
       - $data/sync:/config:rw
