add host_ip variable

--- a/stacks/syncthing/example.env
+++ b/stacks/syncthing/example.env
@@ -4,6 +4,7 @@ syncthingFolder=/path/to/syncthing/folder
 
 # Domain settings
 local_domain=localonly.yourdomain.com
+host_ip=127.0.0.1
 
 # General settings
 UID=1000
