--- a/stacks/syncthing/compose.yaml
+++ b/stacks/syncthing/compose.yaml
@@ -20,4 +20,4 @@ services:
       traefik.http.routers.syncthing.middlewares: 'localonly@file'
       traefik.http.routers.syncthing.rule: 'Host(`sync.${local_domain}`)'
       traefik.http.routers.syncthing.tls.certresolver: 'cloudflare'
-      traefik.http.services.syncthing.loadbalancer.server.port: 8384
+      traefik.http.services.syncthing.loadbalancer.server.url: 'http://${host_ip}:8384'
