--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -5,7 +5,16 @@ data=/path/to/host/storage
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
+# General settings
+UID=1000
+GID=1000
+TZ=Your/Timezone
+
 # Traefik settings
 email=youremail@example.com
 cf_api_key=some-key1 # generate this key from cloudflare
 cs_api_key=some-key2 # generate this key from crowdsec
+
+# LLDAP settings
+LLDAP_JWT_SECRET='a-secure-key-you-generated'
+LLDAP_KEY_SEED='a-secure-key-you-generated'
