--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -30,7 +30,7 @@ services:
       traefik.http.routers.traefik.entryPoints: 'https'
       traefik.http.routers.traefik.rule: 'Host(`tf.${domain}`) || Host(`tf.${local_domain}`)'
       traefik.http.routers.traefik.tls.certresolver: 'cloudflare'
-      traefik.http.services.traefik.loadbalancer.server.port: 8080
+      traefik.http.services.traefik.loadbalancer.server.url: 'http://traefik:8080'
       traefik.http.routers.traefik.middlewares: 'localonly@file'
       traefik.http.routers.api.tls: 'true'
       traefik.http.routers.api.service: 'api@internal'
