--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -2,6 +2,8 @@
 data=/path/to/host/storage
 
 # Domain settings
+tld=com
+domain_without_tld=yourdomain
 domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
