--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -98,7 +98,7 @@ services:
       TZ: ${TZ:-UTC}
       LLDAP_JWT_SECRET: '${LLDAP_JWT_SECRET}'
       LLDAP_KEY_SEED: '${LLDAP_KEY_SEED}'
-      LLDAP_LDAP_BASE_DN: 'dc=${domain_without_tld},dc=${tld}'
+      LLDAP_LDAP_BASE_DN: 'dc=${second_level_domain},dc=${tld}'
     volumes:
       - $data/lldap:/data
     labels:
