add traefik credentials

--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -16,6 +16,7 @@ TZ=Your/Timezone
 email=youremail@example.com
 cf_api_key=some-key1 # generate this key from cloudflare
 cs_api_key=some-key2 # generate this key from crowdsec
+TRAEFIK_DASHBOARD_CREDENTIALS='a-secure-hashed-password'
 
 # LLDAP settings
 LLDAP_JWT_SECRET='a-secure-key-you-generated'
