--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -30,11 +30,11 @@ services:
       traefik.enable: 'true'
       traefik.http.routers.traefik.entryPoints: 'https'
       traefik.http.routers.traefik.rule: 'Host(`tf.${domain}`) || Host(`tf.${local_domain}`)'
+      traefik.http.routers.traefik.tls: 'true'
       traefik.http.routers.traefik.tls.certresolver: 'cloudflare'
       traefik.http.services.traefik.loadbalancer.server.url: 'http://traefik:8080'
       traefik.http.routers.traefik.middlewares: 'localonly@file'
-      traefik.http.routers.api.tls: 'true'
-      traefik.http.routers.api.service: 'api@internal'
+      traefik.http.routers.traefik.service: 'api@internal'
 
   # Crowdsec configuration
   crowdsec:
