--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -32,6 +32,8 @@ services:
       traefik.http.routers.traefik.rule: 'Host(`tf.${domain}`) || Host(`tf.${local_domain}`)'
       traefik.http.routers.traefik.tls: 'true'
       traefik.http.routers.traefik.tls.certresolver: 'cloudflare'
+      traefik.http.routers.traefik.tls.domains[0].main: '${domain}'
+      traefik.http.routers.traefik.tls.domains[0].sans: '*.${domain}'
       traefik.http.services.traefik.loadbalancer.server.url: 'http://traefik:8080'
       traefik.http.routers.traefik.middlewares: 'localonly@file'
       traefik.http.routers.traefik.service: 'api@internal'
