--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -24,7 +24,7 @@ services:
       traefik.enable: 'true'
       traefik.http.routers.garage.entryPoints: 'https'
       traefik.http.routers.garage.middlewares: 'localonly@file'
-      traefik.http.routers.garage.rule: 'Host(`garage.${domain}`)'
+      traefik.http.routers.garage.rule: 'Host(`s3.${local_domain}`)'
       traefik.http.routers.garage.tls.certresolver: 'cloudflare'
       traefik.http.services.garage.loadbalancer.server.url: 'http://garage:3900'
 
