re-add https and put on the proxy network

--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -1,5 +1,4 @@
 networks:
-  default:
   proxy:
     external: true
 services:
@@ -8,7 +7,7 @@ services:
     container_name: garage
     restart: unless-stopped
     networks:
-      default:
+      proxy:
     ports:
      - 3900:3900   ## s3 api
      - 3901:3901   ## rpc
@@ -20,6 +19,13 @@ services:
       - $data/garage.toml:/etc/garage.toml:ro
       - $data/metadata:/var/lib/garage/meta
       - $data/storage:/var/lib/garage/data
+    labels:
+      traefik.enable: 'true'
+      traefik.http.routers.garage.entryPoints: 'https'
+      traefik.http.routers.garage.middlewares: 'goodbois@file'
+      traefik.http.routers.garage.rule: 'Host(`s3.${domain}`)'
+      traefik.http.routers.garage.tls.certresolver: 'cloudflare'
+      traefik.http.services.garage.loadbalancer.server.url: 'http://garage:3900'
 
   webui:
     image: khairul169/garage-webui:latest
