--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -5,4 +5,6 @@ data=/path/to/host/storage
 TZ=Your/Timezone
 
 # Gluetun settings
+cities='comma_separated_list_of_cities'
+provider='your_vpn_provider'
 wgkey='your_vpn_private_key'
