--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -3,9 +3,9 @@ networks:
     driver: bridge
     # enable_ipv6: true
 services:
-  gluetun-protonvpn-1:
+  gluetun-proxy:
     image: qmcgaw/gluetun:v3.40
-    container_name: gluetun-protonvpn-1
+    container_name: gluetun-proxy
     restart: always
     cap_add:
       - NET_ADMIN
@@ -13,47 +13,21 @@ services:
     #   - net.ipv6.conf.all.disable_ipv6=0
     environment:
       TZ: $TZ
-      VPN_SERVICE_PROVIDER: protonvpn
+      VPN_SERVICE_PROVIDER: $provider
       VPN_TYPE: wireguard
       WIREGUARD_PRIVATE_KEY: ${wgkey}
       DOT_PROVIDERS: quad9
       # DOT_IPV6: on
-      SERVER_COUNTRIES: Sweden
-      HTTPPROXY: on
+      SERVER_CITIES: $cities
     ports:
       - 1080:1080/tcp # socks5 proxy
       - 8888:8888/tcp # http proxy
     volumes:
-      - $data/gluetun-protonvpn:/gluetun:rw
-  gluetun-protonvpn-2:
-    image: qmcgaw/gluetun:v3.40
-    container_name: gluetun-protonvpn-2
-    restart: always
-    cap_add:
-      - NET_ADMIN
-    # sysctls:
-    #   - net.ipv6.conf.all.disable_ipv6=0
-    environment:
-      TZ: $TZ
-      VPN_SERVICE_PROVIDER: protonvpn
-      VPN_TYPE: wireguard
-      WIREGUARD_PRIVATE_KEY: ${wgkey}
-      DOT_PROVIDERS: quad9
-      # DOT_IPV6: on
-      SERVER_CITIES: Denver
-    ports:
-      - 1081:1080/tcp # socks5 proxy
-    volumes:
-      - $data/gluetun-protonvpn:/gluetun:rw
-  socks5proxy-protonvpn-1:
+      - $data/gluetun-proxy:/gluetun:rw
+  socks5proxy:
     image: serjs/go-socks5-proxy
-    container_name: socks5proxy-protonvpn-1
-    network_mode: service:gluetun-protonvpn-1
-    restart: always
-  socks5proxy-protonvpn-2:
-    image: serjs/go-socks5-proxy
-    container_name: socks5proxy-protonvpn-2
-    network_mode: service:gluetun-protonvpn-2
+    container_name: socks5proxy
+    network_mode: service:gluetun-proxy
     restart: always
   tor-privoxy:
     image: dockage/tor-privoxy
