--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -1,7 +1,7 @@
 networks: 
   default:
     driver: bridge
-    # enable_ipv6: true
+    enable_ipv6: true
 services:
   gluetun-proxy:
     image: qmcgaw/gluetun:v3.40
@@ -9,15 +9,14 @@ services:
     restart: always
     cap_add:
       - NET_ADMIN
-    # sysctls:
-    #   - net.ipv6.conf.all.disable_ipv6=0
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     environment:
       TZ: $TZ
       VPN_SERVICE_PROVIDER: $provider
       VPN_TYPE: wireguard
       WIREGUARD_PRIVATE_KEY: ${wgkey}
       DOT_PROVIDERS: quad9
-      # DOT_IPV6: on
       SERVER_CITIES: $cities
     ports:
       - 1080:1080/tcp # socks5 proxy
