--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -8,7 +8,7 @@ local_domain=localonly.yourdomain.com
 # General settings
 UID=1000
 GID=1000
-TZ=Your/Timezone
+timezone=Your/Timezone
 
 # Bookstack settings
 root_pass="a_secure_db_admin_password"
