--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -10,7 +10,7 @@ local_domain=localonly.yourdomain.com
 # General settings
 UID=1000
 GID=1000
-TZ=Your/Timezone
+timezone=Your/Timezone
 
 # Traefik settings
 email=youremail@example.com
