--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -6,7 +6,7 @@ domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
 # General settings
-TZ=Your/Timezone
+timezone=Your/Timezone
 UID=1000
 GID=1000
 
