--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -7,7 +7,7 @@ domain=yourdomain.com
 # General settings
 UID=1000
 GID=1000
-TZ=Your/Timezone
+timezone=Your/Timezone
 
 # Paperlessngx settings
 secret_key='a_long_and_secure_secret'
