--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -2,7 +2,7 @@
 data=/path/to/host/storage
 
 # General settings
-TZ=Your/Timezone
+timezone=Your/Timezone
 
 # Gluetun settings
 cities='comma_separated_list_of_cities'
