--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -14,7 +14,7 @@ services:
       bookstack: null
       proxy: null
     environment:
-      TZ: ${timezone}
+      TZ: ${timezone:-UTC}
       PUID: ${UID}
       PGID: ${GID}
       APP_DEBUG: true
@@ -42,7 +42,7 @@ services:
     networks:
       bookstack: null
     environment:
-      TZ: ${timezone}
+      TZ: ${timezone:-UTC}
       PUID: ${UID}
       PGID: ${GID}
       MYSQL_ROOT_PASSWORD: ${root_pass}
