--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -14,7 +14,7 @@ services:
     #- 3902:3902   ## s3 web
     #- 3903:3903   ## admin api and '/metrics' for prometheus
     environment:
-      TZ: ${timezone}
+      TZ: ${timezone:-UTC}
     volumes:
       - $data/garage.toml:/etc/garage.toml:ro
       - $data/metadata:/var/lib/garage/meta
