--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -6,8 +6,8 @@ domain=yourdomain.com
 local_domain=localonly.yourdomain.com
 
 # General settings
-UID=1000
-GID=1000
+uid=1000
+gid=1000
 timezone=Your/Timezone
 
 # Bookstack settings
