--- a/stacks/media/example.env
+++ b/stacks/media/example.env
@@ -6,7 +6,7 @@ media=/path/to/media/storage
 domain=yourdomain.com
 
 # General settings
-UID=1000
-GID=1000
+uid=1000
+gid=1000
 UMASK=000
 timezone=Your/Timezone
