--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -7,8 +7,8 @@ local_domain=localonly.yourdomain.com
 
 # General settings
 timezone=Your/Timezone
-UID=1000
-GID=1000
+uid=1000
+gid=1000
 
 # Freshrss settings
 DB_PASSWORD='a_secure_db_password'
