--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -8,8 +8,8 @@ second_level_domain=yourdomain
 local_domain=localonly.yourdomain.com
 
 # General settings
-UID=1000
-GID=1000
+uid=1000
+gid=1000
 timezone=Your/Timezone
 
 # Traefik settings
