--- a/stacks/syncthing/compose.yaml
+++ b/stacks/syncthing/compose.yaml
@@ -8,8 +8,8 @@ services:
     restart: always
     network_mode: host
     environment:
-      PUID: $UID
-      PGID: $GID
+      PUID: $uid
+      PGID: $gid
       UMASK: $UMASK
     volumes:
       - $syncthingFolder/Syncthing:/data1:rw
