--- a/stacks/utils/example.env
+++ b/stacks/utils/example.env
@@ -5,8 +5,8 @@ data=/path/to/host/storage
 domain=yourdomain.com
 
 # General settings
-UID=1000
-GID=1000
+uid=1000
+gid=1000
 
 # Picsur settings
 picsur_dbpass='a_secure_db_password'
