--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -17,9 +17,9 @@ services:
       DOCKER_MODS: linuxserver/mods:jellyfin-opencl-intel
     volumes:
       - ${data:-.}/jellyfin:/config:rw
-      - $media/TV:/data/tvshows:rw
-      - $media/Movies:/data/movies:rw
-      - $media/Music:/data/music:rw
+      - ${media}/TV:/data/tvshows:rw
+      - ${media}/Movies:/data/movies:rw
+      - ${media}/Music:/data/music:rw
     devices:
       - /dev/dri
     labels:
@@ -66,7 +66,7 @@ services:
       PGID: ${gid:-1000}
     volumes:
       - ${data:-.}/calibre:/config
-      - $media/Books:/books
+      - ${media}/Books:/books
     labels:
       traefik.enable: 'true'
       traefik.http.routers.calibre.entryPoints: 'https'
