standardize port format

--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -9,10 +9,10 @@ services:
     networks:
       proxy:
     ports:
-     - 3900:3900   ## s3 api
-     - 3901:3901   ## rpc
-    #- 3902:3902   ## s3 web
-    #- 3903:3903   ## admin api and '/metrics' for prometheus
+     - "3900:3900/tcp"   ## s3 api
+     - "3901:3901/tcp"   ## rpc
+    #- "3902:3902/tcp"   ## s3 web
+    #- "3903:3903/tcp"   ## admin api and '/metrics' for prometheus
     environment:
       TZ: ${timezone:-UTC}
     volumes:
