--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -7,9 +7,9 @@ services:
       - ${data:-.}/adguardhome/work:/opt/adguardhome/work
       - ${data:-.}/adguardhome/conf:/opt/adguardhome/conf
     ports:
-      - 53:53/tcp
-      - 53:53/udp
-      - 3000:3000/tcp
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "3000:3000/tcp"
   adguardhome-sync:
     image: ghcr.io/bakito/adguardhome-sync
     container_name: adguardhome-sync
