--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -84,7 +84,7 @@ services:
       HOMEPAGE_ALLOWED_HOSTS: home.${domain}
     volumes:
       - ${data:-.}/homepage:/app/config:rw
-      - /var/run/docker.sock:/var/run/docker.sock:r
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     labels:
       traefik.enable: 'true'
       traefik.http.routers.homepage.entryPoints: 'https'
